# AnDy-demo-activity-recognition

./: README.md
data/trained_models/: demo_andy_final_Det_model  demo_andy_final_Det_model.xml  demo_andy_final_GePos_model.xml
data/trained_models/model_sept11_Details_oneFeature/: demo_andy_final_Det_model  demo_andy_final_create_model_config_model.ini  demo_andy_final_details.ini
data/trained_models/models_sept4/: demo_andy_final_CuAct_model  demo_andy_final_CuAct_model.xml  demo_andy_final_DePos_model  demo_andy_final_DePos_model.xml  demo_andy_final_Det_model  demo_andy_final_GePos_model  demo_andy_final_create_model_config_model.ini
data/yarp_context_files/online_recognition/: demo_andy_final_detailed_posture.ini  demo_andy_final_details.ini  demo_andy_final_general_posture.ini  demo_andy_v2.ini  (+1 more)
src/xsens_to_yarp_streamer/: CMakeLists.txt  README.md
src/xsens_to_yarp_streamer/src/: angularsegmentkinematicsdatagram.cpp  angularsegmentkinematicsdatagram.h  centerofmassdatagram.cpp  centerofmassdatagram.h  copyright.txt  datagram.cpp  datagram.h  eulerdatagram.cpp  eulerdatagram.h  jointanglesdatagram.cpp  jointanglesdatagram.h  linearsegmentkinematicsdatagram.cpp  linearsegmentkinematicsdatagram.h  main.cpp  metadatagram.cpp  metadatagram.h  parsermanager.cpp  parsermanager.h  portsmap.h  positiondatagram.cpp  positiondatagram.h  quaterniondatagram.cpp  quaterniondatagram.h  scaledatagram.cpp  scaledatagram.h  streamer.cpp  timecodedatagram.cpp  timecodedatagram.h  trackerkinematicsdatagram.cpp  trackerkinematicsdatagram.h  udpserver.cpp  udpserver.h
